# meshcore-mqtt-live-map

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  VERSIONS.md  docker-compose.yaml  docs.md  howto.md  pyproject.toml
.github/: FUNDING.yml
backend/: .style.yapf  Dockerfile  app.py  app_refactored.py  auth.py  config.py  decoder.py  helpers.py  history.py  los.py  requirements.txt  state.py  turnstile.py
backend/routes/: api.py  debug.py  static.py  websocket.py
backend/scripts/: meshcore_decode.mjs
backend/services/: broadcaster.py  mqtt.py  persistence.py  reaper.py
backend/static/: app.js  index.html  landing.html  styles.css  sw.js  turnstile.js
